[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.78"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tokio = { version = "1.33.0", features = ["full"] }
test-log = "0.2.15"
